# hand_simulation

./: CMakeLists.txt  README.md  backend.json  bitbot.cmake  bitbot_hand.xml  main.cpp  user_func.cpp  user_func.h
doublehand/: double_hand.xml  right_hand.xml  urdf-five3.urdf  urdf-fiveleft2.urdf
